# dyche

./: .gitignore  Cargo.toml  README.md  Untitled
fpl_api/: Cargo.toml
fpl_api/src/: lib.rs
fpl_api/src/requests/: fixtures.rs  game_state.rs  game_week_players.rs  game_week_players_stats.rs  mini_league.rs  mod.rs  player.rs  player_image.rs  team.rs  team_game_week.rs  transfers.rs
fpl_api/src/responses/: fixtures.rs  game_state.rs  game_week_players.rs  game_week_players_stats.rs  mini_league.rs  mod.rs  player.rs  team.rs  team_game_week.rs  transfers.rs
fpl_api/src/types/: chip.rs  club_id.rs  element_type.rs  fixture_id.rs  game_week.rs  game_week_id.rs  league_id.rs  mod.rs  player_id.rs  player_position.rs  team_id.rs
fpl_api_scraper/: Cargo.toml
fpl_bot/: Cargo.toml
fpl_bot/src/: constants.rs  lib.rs  main.rs
fpl_bot/src/autocompletes/: helpers.rs  league_or_user.rs  mini_league.rs  mod.rs  overall_or_week.rs  player.rs  player_or_club.rs
fpl_bot/src/commands/: captains.rs  chips.rs  deadline.rs  differentials.rs  hits.rs  loglevel.rs  mod.rs  register.rs  table.rs  team.rs  transfers.rs  unique.rs  whohas.rs
fpl_bot/src/images/: constants.rs  differentials.rs  mod.rs  table.rs  team.rs  transfers.rs  unique.rs
fpl_bot/src/images/util/: centered_text_box.rs  mod.rs  player_card.rs
fpl_bot/src/notifications/: mod.rs  points.rs  scores.rs
fpl_bot/src/utils/: autocomplete.rs  common.rs  embed.rs  embed_builder.rs  embed_builder_v2.rs  macros.rs  mod.rs  paginator.rs
fpl_common/: Cargo.toml
fpl_common/src/: paths.rs
fpl_common/src/types/: chip.rs  club_id.rs  fixture_id.rs  game_week_id.rs  league_id.rs  player_id.rs  player_position.rs  team_id.rs
fpl_db/: Cargo.toml
fpl_db/migrations/: 20250123204606_create_fixtures.sql  20250125124355_create_players.sql  20250125124907_change_players_selected_by_percent_col_type.sql  20250125125249_change_players_other_col_types.sql  20250125132603_create_clubs.sql  20250125142943_create_game_week_tables.sql  20250125202525_player_ict_index_to_float.sql  20250125202749_club_cols_to_smallint.sql  20250125203320_fixtures_foreign_keys.sql  20250125203559_fixtures_int_to_smallints.sql  20250125203734_fixtures_int_to_smallints_2.sql  20250125203920_game_weeks_int_to_smallints.sql  20250125204006_game_weeks_int_to_smallints_2.sql  20250125204233_game_weeks_int_to_smallints_3.sql  20250125204346_players_int_to_smallint.sql  20250125204654_players_team_fk.sql  20250125205743_create_game_week_player_table.sql  20250125212728_game_weeks_players_ids_to_smallint.sql  20250125213853_create_mini_league_table.down.sql  20250125213853_create_mini_league_table.sql  20250125214255_create_mini_league_standings_table.sql  20250125220455_mini_leagues_admin_entry_to_integer.sql  20250125220707_create_teams_table.sql  20250125221326_mini_league_standings_total_to_smallint.sql  20250125221547_teams_favourite_team_to_smallint.sql  20250125222243_mini_league_standings_foreign_keys.sql  20250125232448_teams_favourite_team_remove_not_null.sql  20250126105242_create_player_fixtures_table.sql  20250126110631_player_fixtures_table_primary_key.sql  20250126111302_create_player_history_past_table.sql  20250126111637_create_player_history_table.sql  20250126114540_create_team_game_week_table.sql  20250126132338_create_transfers_table.sql  20250126135921_transfers_table_team_id_to_int.sql  20250130213126_current_game_week_view.sql  20250201124005_remove_summary_event_rank_not_null.sql  20250201124610_remove_tgw_repsponse_not_nulls.sql  20250201125047_remove_mls_team_fk.sql  20250201125257_fix_last_migration.sql  20250201125408_actually_remove_mls_team_fk.sql  (+30 more)
fpl_db/src/models/: club.rs  discord.rs  fixture.rs  fixtures.rs  game_week.rs  game_week_player.rs  mini_league.rs  mod.rs  player.rs  team.rs  team_game_week.rs  transfers.rs
fpl_db/src/queries/: club.rs  discord.rs  fixture.rs  fixtures.rs  game_week.rs  game_week_player.rs  mini_league.rs  mod.rs  player.rs  team.rs  team_game_week.rs  transfers.rs
fpl_models/: Cargo.toml
fpl_scraper/: Cargo.toml
fpl_scraper/src/: error.rs  lib.rs  scraper.rs
fpl_scraper/src/scrapers/: fixtures.rs  game_state.rs  game_week_players.rs  mini_leagues.rs  mod.rs  player_images.rs  players.rs  team_game_weeks.rs  teams.rs  transfers.rs
