[workspace]
members = ["fpl_api", "fpl_common", "fpl_db", "fpl_scraper"]
resolver = "2"

[workspace.dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = "1.43.0"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
dotenv = "0.15.0"
tracing = "0.1.41"
