[package]
name = "fpl_api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = "1.43.0"
fpl_common = { path = "../fpl_common" }
[dev-dependencies]
tokio = { version = "1.43.0", features = ["full", "macros", "rt", "test-util"] }
