[package]
name = "fpl_api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
fpl_common = { path = "../fpl_common" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
governor = { workspace = true }
async-trait = "0.1.86"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full", "macros", "rt", "test-util"] }
