[package]
name = "fpl_bot"
version = "0.1.0"
edition = "2021"


[dependencies]
poise = "0.6.1"
serenity = "0.12.4"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
dotenv = { workspace = true }
fpl_common = { path = "../fpl_common" }
fpl_api = { path = "../fpl_api" }
fpl_db = { path = "../fpl_db" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }
