[package]
name = "fpl_bot"
version = "0.1.0"
edition = "2021"


[dependencies]
poise = "0.6.1"
serenity = "0.12.4"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
dotenv = { workspace = true }
fpl_common = { path = "../fpl_common" }
fpl_api = { path = "../fpl_api" }
fpl_db = { path = "../fpl_db" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1.17"
ordinal = "0.3.2"
chrono.workspace = true
fuzzy-matcher = "0.3.7"
async-trait = "0.1.86"
svg = "0.18.0"
resvg = "0.44.0"
tiny-skia = "0.11.4"
usvg = "0.44.0"
fontdb = "0.23.0"
serde_json.workspace = true

[[bin]]
name = "render_table_test"
path = "src/bin/render_table_test.rs"
