[package]
name = "fpl_common"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
poise = "0.6.1"
serenity = "0.12.4"
async-trait = { workspace = true }
tracing = { workspace = true }
