[package]
name = "fpl_db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tokio = { version = "1", features = ["full"] }
dotenv = { workspace = true }
fpl_common = { path = "../fpl_common" }
fpl_api = { path = "../fpl_api" }
chrono = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
